# rust-service

./: .env.example  .gitignore  Cargo.toml  README.md  postgresql.yml  rustfmt.toml
logsi/: app1.log.2026-02-15
postgresql/: .env.example  postgresql.yml
src/: app.rs  client.rs  configs.rs  cron.rs  extractors.rs  handlers.rs  logger.rs  main.rs  models.rs  routing.rs  state.rs  swagger.rs
src/api/: mod.rs  router.rs  server.rs  swagger.rs
src/api/extractors/: extractors.rs
src/api/v1/: handlers.rs  router.rs
src/api/v2/: router.rs
src/core/: mod.rs
src/core/handlers/: hello.rs
src/core/results/: hello.rs
src/core/use_cases/: hello.rs  mod.rs
src/infra/: mod.rs
src/infra/clients/: client.rs
src/mediator/: erase.rs  errors.rs  mediator.rs  mod.rs
