[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features =["full"] }
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
tokio-util = "0.7.18"
axum-extra = "0.12.5"
tokio-cron-scheduler = { version = "0.15.1", features = ["signal", "english"] }
anyhow = "1.0.100"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
